==================== 2.25.3 ======================

==================== 2.25.2 ======================

2008-12-17  William Jon McCann  <jmccann@redhat.com>

	* Makefile.am: Add missing libgnomeui CFLAGS
	Patch from: lucasr.at.mundo@gmail.com
	(Bug #564192)

2008-11-14  Callum McKenzie  <callum@spooky-possum.org>

	* applet.[ch]: Patch from Maxim Ermilov to rationalise
	GTK includes. See bug 560678.

==================== 2.24.0.1 ====================

2008-09-09  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c (accessx_status_applet_get_glyph_pixbuf): Patch from
	Matt Keenan to avoid a crash when a colormap isn't present. (Bug
	#549722)

2008-07-06  Changwoo Ryu  <cwryu@debian.org>

	* docs/ko/ko.po: Added Korean document translation.
	* docs/Makefile.am: Added ko to DOC_LINGUAS.

2008-04-11  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c (dialog_cb): Fix the launching of the
	gnome-keyboard-properties dialog. Patch from Matthias Clasen (bug
	#517500).

2008-03-02  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c (dialog_cb): Make allowance for the disappearance of
	gnome-accessibility-keyboard-properties and its movement to
	gnome-keyboard-properties. (Bug #517500.)

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* GNOME_AccessxStatusApplet.server.in.in:
	Fix bugzilla component and add missing line to make bug buddy
	work for this applet. Reported by Matthias Clasen.
	Closes bug #425003.

2007-07-17  Jaap Haitsma <jaap@haitsma.org>

	* GNOME_AccessxApplet.xml: use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456955

	* applet.c: (about_cb), (create_applet),
	(accessx_status_applet_destroy), (accessx_status_applet_fill):
	* applet.h: Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/accessx-status.xml: Fix build.
