@@ -22,7 +22,6 @@
 #include <X11/Xatom.h>
 #include <gdk/gdkx.h>
 #define WNCK_I_KNOW_THIS_IS_UNSTABLE 1
-#include <libgnomeui/libgnomeui.h>
 #include <libwnck/libwnck.h>
 #include <string.h>
 
