@@ -1,3 +1,7 @@
+2009-01-15  Callum McKenzie  <callum@spooky-possum.org>
+
+	* stickynotes.c: We aren't using libgnomeui anymore. Bug 567775.
+
 ==================== 2.25.3 ======================
 
 ==================== 2.25.2 ======================
