@@ -1,3 +1,9 @@
+2009-01-15  Callum McKenzie  <callum@spooky-possum.org>
+
+	* Makefile.am
+	* applet.c: Replace gnome_program_locate_file now that we're not
+	#including any gnome headers. Bug 567779.
+
 ==================== 2.25.3 ======================
 
 ==================== 2.25.2 ======================
